--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "react",
   "version": "1.0.0",
-  
-  "homepage": ".",
+  "type": "module", 
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "dev": "parcel index.html"
   },
